# Assistent

./: .gitignore  HYBRID_READY_CHECKLIST.md  HYBRID_READY_QUICKSTART.md  Makefile  README.md  VERIFY_HARDEN_CHECKLIST.md
.github/workflows/: ci.yml
core/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  env.example  go_no_go_test.sh  pyproject.toml  pytest.ini  quick_test.sh  requirements-dev.txt  requirements.txt  setup_tls.sh  verify_harden.py
core/.github/workflows/: ci.yml
core/src/app/: main.py  middleware.py  security.py  settings.py
core/src/observability/: api_logs.py  api_metrics.py  pii_masker.py  ring_buffer.py
core/src/router/: api_router.py
core/src/scripts/: api_selftest.py  flow_selftest.py  go_no_go_runner.py  report_slowest.py
core/src/tools/: api_tools.py
core/tests/: pii_mask_samples.json  test_health.py
desktop/: README.md
docs/: CI_GATES.md  DAY_1_CHECKLIST.md
docs/adr/: 0001-hybrid-architecture.md
infra/launchd/: jarvis.plist
ui/: env.example  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
ui/src/: middleware.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/tests/: smoke.spec.ts
