[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-core"
version = "0.1.0"
description = "Local AI assistant with edge-first processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.3",
    "sse-starlette>=2.0",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
]

[project.optional-dependencies]
            dev = [
                "pytest>=7.0",
                "pytest-cov>=4.0",
                "pytest-asyncio>=0.21",
                "httpx>=0.24",
                "requests>=2.31",
                "black>=23.0",
                "ruff>=0.1.0",
                "mypy>=1.0",
                "pre-commit>=3.0",
            ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
